<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_remove_from_fav"
        android:orderInCategory="1"
        android:title="@string/remove_from_fav"
        android:icon="@drawable/white_star_48"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/menu_select_all"
        android:orderInCategory="1"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_remove"
        android:orderInCategory="1"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />
</menu>